k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bankingops-dev
  labels:
    app: bankingops
    env: dev
