k8s/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: transaction-api
  namespace: bankingops-dev
spec:
  selector:
    app: transaction-api
  ports:
    - port: 80
      targetPort: 8080
  type: ClusterIP
