k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bankingops-ingress
  namespace: bankingops-dev
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: bankingops.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: transaction-api
                port:
                  number: 80
